<!--
	JPPF
  Copyright (C) 2005-2015 JPPF Team.
	http://www.jppf.org

	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at

		 http://www.apache.org/licenses/LICENSE-2.0

	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
-->

<resources>
  <string name="app_name">JPPF Android Node</string>

  <!-- ===================================================== -->
  <!-- main screen                                           -->
  <!-- ===================================================== -->

  <string name="title_activity_main">JPPF Android Node</string>
  <string name="title_activity_settings">Configuration</string>

  <!-- ===================================================== -->
  <!-- preferences                                           -->
  <!-- ===================================================== -->

  <string name="action_settings">Settings</string>

  <!-- preferences: server connections configuration -->
  <string name="pref_server_connection_title">Server connection</string>
  <string name="pref_server_connection_sum">Server connectivity settings</string>
  <string name="pref_servers_title">Servers to connect to</string>
  <string name="pref_servers_sum">1 per line, format server:port[:ssl_enabled]</string>
  <string name="pref_servers_hint">my.host1.com:11443\n1.2.3.4:11111:false</string>

  <!-- preferences: processing threads configuration -->
  <string name="pref_threads_title">Threads</string>
  <string name="pref_threads_sum">Number of processing threads</string>

  <!-- preferences: SSL enabled flag -->
  <string name="pref_ssl_enabled_title">SSL enabled</string>
  <string name="pref_ssl_enabled_sum_on">on: SSL/TLS communications are enabled</string>
  <string name="pref_ssl_enabled_sum_off">off: SSL/TLS communications are disabled</string>
  <string name="pref_ssl_enabled_default">false</string>

  <!-- preferences: security subscreen -->
  <string name="pref_security_title">Security</string>
  <string name="pref_security_sum">SSL/TLS configuration</string>

  <!-- preferences: authentication type -->
  <string name="pref_ssl_auth_type_title">Mutual authentication</string>
  <string name="pref_ssl_auth_type_sum_on">on: client authentication required</string>
  <string name="pref_ssl_auth_type_sum_off">off: server authentication only</string>
  <string name="pref_ssl_auth_type_default">false</string>

  <!-- preferences: key store location and password configuration -->
  <string name="pref_key_store_location_title">Node key store location</string>
  <string name="pref_key_store_location_sum">Location of the node public/private key store</string>
  <string name="pref_key_store_password_title">Node key store password</string>
  <string name="pref_key_store_password_sum">Password for the node public/private key store</string>

  <!-- preferences: trust store location and password configuration -->
  <string name="pref_trust_store_location_title">Server trust store location</string>
  <string name="pref_trust_store_location_sum">Location of the server certificate store</string>
  <string name="pref_trust_store_password_title">Server trust store password</string>
  <string name="pref_trust_store_password_sum">Password for the server certificate store</string>

  <!-- preferences: SSLContext protocol configuration -->
  <string name="pref_ssl_context_protocol_title">SSL context protocol</string>
  <string name="pref_ssl_context_protocol_sum">Protocol value for SSLContext.getProtocol()</string>
  <string name="pref_ssl_context_protocol_default">Default</string>
  <string-array name="pref_ssl_context_protocol_values">
    <item>SSL</item>
    <item>SSLv3</item>
    <item>TLS</item>
    <item>TLSv1</item>
    <item>TLSv1.1</item>
    <item>TLSv1.2</item>
  </string-array>

  <!-- preferences: SSLEngine protocols configuration -->
  <string name="pref_ssl_engine_protocol_title">SSL engine protocols</string>
  <string name="pref_ssl_engine_protocol_sum">Protocol value for SSLEngine.getEnabledProtocols()</string>
  <string-array name="pref_ssl_engine_protocol_values">
    <item>SSLv3</item>
    <item>TLSv1</item>
  </string-array>
  <string-array name="pref_ssl_engine_protocol_default">
    <item>TLSv1</item>
  </string-array>

  <!-- preferences: enabled cipher suites configuration -->
  <string name="pref_enabled_cipher_suites_title">Enabled cypher suites</string>
  <string name="pref_enabled_cipher_suites_sum">The set of enabled cypher suites</string>

  <!-- preferences: battery monitoring subscreen -->
  <string name="pref_battery_monitoring_title">Battery monitoring</string>
  <string name="pref_battery_monitoring_sum">Configure warning and critical battery levels</string>

  <!-- preferences: SSL enabled flag -->
  <string name="pref_battery_monitoring_enabled_title">Battery monitoring enabled</string>
  <string name="pref_battery_monitoring_enabled_sum_on">on: battery monitoring is enabled</string>
  <string name="pref_battery_monitoring_enabled_sum_off">off: battery monitoring is disabled</string>
  <string name="pref_battery_monitoring_enabled_default">true</string>

  <!-- preferences: warning battery level configuration -->
  <string name="pref_battery_warning_title">Warning level %</string>
  <string name="pref_battery_warning_sum">Warning battery level in % of charge</string>

  <!-- preferences: critical battery level configuration -->
  <string name="pref_battery_critical_title">Critical level %</string>
  <string name="pref_battery_critical_sum">Critical battery level in % of charge</string>

  <!-- ===================================================== -->
  <!-- useful constants                                      -->
  <!-- ===================================================== -->

  <string-array name="pref_empty_array">
  </string-array>

  <string name="empty_string"></string>

</resources>
